# avogadro2-rpc-test

./: avogadro-rpc-tutorial.md
basicCpp/: CMakeLists.txt  main.cpp
basicPython/: updateMolecule.py
dialogConnectionCpp/: CMakeLists.txt  main.cpp  rpcconnection.cpp  rpcconnection.h
